<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start">

        <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nombre"
            android:textSize="20sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12:34"
            android:textSize="20dp"
            android:textColor="@android:color/black"
            android:gravity="end"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewCaloriasLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calorias"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/textViewCalorias"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:gravity="end"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewProteinasLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proteinas"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/textViewProteinas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:gravity="end"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewGrasasLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grasas"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/textViewGrasas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:gravity="end"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewCarbohidratosLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carbs"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/textViewCarbohidratos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:gravity="end"/>
    </LinearLayout>

</LinearLayout>
